Improved unit test to print useful info.